prepare for third review, fix horizontal scrolling

--- a/blocks/cards/__image/cards__image.css
+++ b/blocks/cards/__image/cards__image.css
@@ -1,5 +1,5 @@
 .cards__image {
-  max-width: 46%;
+  max-width: 47%;
   margin-top: 48px;
   height: min-content;
 }
