--- a/blocks/cards/__paragraph/cards__paragraph.css
+++ b/blocks/cards/__paragraph/cards__paragraph.css
@@ -5,7 +5,6 @@
   font-size: 18px;
   line-height: 163%;
   color: #ffffff;
-  overflow: hidden;
 }
 
 .cards__paragraph:nth-child(2n) {
