--- a/blocks/cards/__paragraphs/cards__paragraphs.css
+++ b/blocks/cards/__paragraphs/cards__paragraphs.css
@@ -1,5 +1,5 @@
 .cards__paragraphs {
-  max-width: 50%;
+  max-width: 49%;
   margin: 48px 0 0 0;
 }
 
