--- a/blocks/cards/__title/cards__title.css
+++ b/blocks/cards/__title/cards__title.css
@@ -1,6 +1,6 @@
 .cards__title {
   /* расчитал, что отсут примерно изменяется в пределах 4% */
-  width: 46%;
+  width: 47%;
   margin: 0;
   font-weight: 900;
   font-size: 72px;
@@ -23,4 +23,3 @@
     margin-left: 16px;
   }
 }
-  
