--- a/blocks/cards/__website/cards__website.css
+++ b/blocks/cards/__website/cards__website.css
@@ -1,5 +1,5 @@
 .cards__website {
-  width: 50%;
+  width: 49%;
   display: flex;
   flex-direction: column;
   justify-content: end;
