--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -18,16 +18,7 @@
     text-align: start;
     margin-top: 48px;
     padding-top: 0;
-    /* padding-top: 28px; */
-    font-size: 14px;
     line-height: 14px;
     align-self: flex-start;
   }
 }
-
-/* @media screen and (max-width: 320px) {
-  .footer__copyright {
-    margin-top: 48px;
-    padding-top: 0;
-  }
-} */
