--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -5,7 +5,7 @@
 
 @media screen and (max-width: 1024px) {
   .lead {
-    width: 928px;
+    width: 90%;
     margin-top: 48px;
   }
 }
